--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -2,25 +2,16 @@
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="@drawable/login_background"
+    android:background="@drawable/background"
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="115dp"
-        android:layout_marginTop="24dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:text="@string/app_name"
-        android:textColor="#FFFFFF"
-        android:textSize="36sp" />
 
     <ImageView
         android:layout_width="427dp"
-        android:layout_height="329dp"
-        android:src="@drawable/toystory" />
+        android:layout_height="400dp"
+        android:src="@drawable/twipee_logo"
+        android:padding="20dp"/>
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
