--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,36 +7,56 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:theme="@style/AppTheme.AppBarOverlay">
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
+
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:minHeight="?actionBarSize"
                 android:padding="10dp"
                 android:text="@string/app_name"
                 android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
-                android:textSize="10dp" />
+                android:textColor="#FFFFFF"
+                android:textScaleX="1.5"
+                android:textSize="10dp"
+                android:layout_weight="9"
+                android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/logout"
+            <TextView
+                android:id="@+id/step_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="logout" />
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:text="StepService" />
+
+
+            <ToggleButton
+                android:id="@+id/toggleButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:text="ToggleButton"
+                android:textOff="여행시작"
+                android:textOn="여행끝" />
         </LinearLayout>
+
+
     </com.google.android.material.appbar.AppBarLayout>
+
+
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
@@ -48,7 +68,7 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary"
+        android:layout_gravity="bottom"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
