--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#85B7C1D5</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorButton">#B45871</color>
+    <color name="colorButton_1">#999999</color>
+    <color name="sendGreen">#4CAF50</color>
+    <color name="colortwipee">#85B7C1D5</color>
 
     <color name="grey">#bfbfbf</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="link_blue">#3385ff</color>
     <color name="next">#474E72</color>
+    <color name="mainColor">#8497B0</color>
 </resources>
