--- a/app/src/main/res/layout/fragment_user_view.xml
+++ b/app/src/main/res/layout/fragment_user_view.xml
@@ -226,12 +226,13 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/user_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:orientation="horizontal">
 
-        <Button
+       <!-- <Button
             android:layout_width="120dp"
             android:layout_height="33dp"
             android:layout_marginLeft="15dp"
@@ -250,7 +251,7 @@
             android:layout_height="33dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/btn"
-            android:text="카페" />
+            android:text="카페" />-->
     </LinearLayout>
 
     <LinearLayout
@@ -259,7 +260,7 @@
         android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
-        <Button
+        <!--<Button
             android:layout_width="120dp"
             android:layout_height="33dp"
             android:layout_marginLeft="15dp"
@@ -279,7 +280,7 @@
             android:background="@drawable/btn"
             android:layout_marginLeft="10dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_more_horiz_black_24dp" />
+            android:src="@drawable/ic_more_horiz_black_24dp" />-->
     </LinearLayout>
 
     <Button
