--- a/app/src/main/res/layout/item_snsview.xml
+++ b/app/src/main/res/layout/item_snsview.xml
@@ -47,19 +47,17 @@
             </ImageView>
         </RelativeLayout>
 
-        <com.NSLB.TWIPEE.Ui.main.SquareImageView
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/vp_post"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/iv_post"
-            android:layout_below="@+id/bar_userInfo"
-            android:scaleType="centerCrop">
-        </com.NSLB.TWIPEE.Ui.main.SquareImageView>
+            android:layout_height="400dp"
+            android:layout_below="@+id/bar_userInfo" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:id="@+id/bar_icon"
-            android:layout_below="@+id/iv_post">
+            android:layout_below="@+id/vp_post">
 
             <RelativeLayout
                 android:layout_width="60dp"
@@ -128,79 +126,14 @@
                 android:layout_marginTop="15dp">
             </TextView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/layout_caption"
-                android:layout_below="@id/tv_caption"
-                android:layout_marginTop="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="여행타입"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_triptype">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="여행기간"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_period">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="여행인원"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_people">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="교통수단"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_traffic">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="여행비용"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_cost">
-                </TextView>
-            </LinearLayout>
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="더보기"
+                android:text="상세 보기"
                 android:textColor="@color/grey"
                 android:textSize="18sp"
                 android:id="@+id/tv_moreContent"
-                android:layout_below="@+id/layout_caption"
+                android:layout_below="@+id/tv_caption"
                 android:layout_marginTop="15dp">
             </TextView>
 
